minor overall corrections

--- a/_includes/blog/scripts.html
+++ b/_includes/blog/scripts.html
@@ -165,3 +165,4 @@ $(document).ready(function () {
         $(".post-image > img").unveil(450);
     });
 </script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59caa8be11e40484"></script>
