--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,6 +9,7 @@
 
 <head>
     {% include common/meta.html %}
+    <link rel= "shortcut icon" href = "../assets/images/simple-icons/favicon.jpg">
     <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
     {% include common/libraries.html %}
 </head>
