--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@
 <head>
     {% include common/meta.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/home.css' rel="stylesheet" type="text/css">
+    <link rel= "shortcut icon" href = "../assets/images/simple-icons/favicon.jpg">
     {% include common/libraries.html %}
 </head>
 
